// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton renders as expected 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <Image
    accessibilityRole="image"
    source={
      Object {
        "uri": "icon.png",
      }
    }
    style={
      Array [
        Object {
          "height": 16,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 16,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`IconButton renders as expected with custom icon style 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <Image
    accessibilityRole="image"
    source={
      Object {
        "uri": "icon.png",
      }
    }
    style={
      Array [
        Object {
          "height": 16,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 16,
        },
        Object {
          "backgroundColor": "antiquewhite",
        },
      ]
    }
  />
</View>
`;
